manual, which only contains summaries of changes.
-----------------------------------------------------------------------------
2011-01-14
   * reference.xml: Redirected note in SetPlotAreaPixels to new section on
     multiple plots. Fixed SetLegend confusion about multiple plots versus
     multiple data sets. Fixed SetPlotBorderType parameter name.

2011-01-11
   * advanced.xml: Added missing id attributes to some level 3 sections.

   * pdf.xsl: Fixed comment typo.

   * variables.list: Documented changes in internal variables (committed
     2010-12-27) which track element drawing: Removed background_done
     and title_done, and added new member array done[].

   * advanced.xml: Added new section on multiple plots per image.

   * examples.xml: Moved pagebreak tags and add missing ones (for PDF).
     Updated description of example of two plots on an image.

   * Makefile, examples.xml, examples/outbreak.php: Add new example of
     multiple plot overlay.

2011-01-05
    * advanced.xml: Added figure to Truecolor section showing file formats.

    * advanced.xml: Added new section showing how to extend the PHPlot class
      in order to customize default settings.

2011-01-04
   * reference.xml: Add icons showing the point shapes in SetPointShapes().
   * images/shape-*.png: Add 20 new image files for point shapes.

2011-01-03
   * reference.xml: Document new behavior of functions to reset parameters
     to defaults when no arguments (or special values) are supplied:
     SetLegendPixels(), SetNumXTicks(), SetNumYTicks(), SetXAxisPosition(),
     and SetYAxisPosition(). Documented existing behavior of functions to
     reset parameters to defaults: SetXTickIncrement(), SetYTickIncrement(),
     SetXTitle(), and SetYTitle().

2010-12-29
   * developer.xml: Document changes as a result of fixing a bug with
     color allocation vs multiple plots per image. Add 2 new internal
     functions and remove 1 unused internal function.

2010-12-28